--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
 		"raw-loader": "^4.0.2",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
-		"three": "^0.177.0"
+		"three": "^0.177.0",
+		"three-stdlib": "^2.36.0"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
