--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "@gsap/react": "^2.1.2",
     "@react-three/drei": "^10.1.2",
     "@react-three/fiber": "^9.1.2",
+    "@react-three/postprocessing": "^3.0.4",
     "framer-motion": "^12.16.0",
-    "framer-motion-3d": "^12.4.13",
     "gsap": "^3.13.0",
     "next": "15.3.3",
     "raw-loader": "^4.0.2",
